2009-08-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Added some
	  extract method unit tests.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects/DomTests.cs: Fixed bug in unit test.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* UnitTests.csproj: Updated dependencies. We now depend on
	  gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  test for "Bug 531525 - Refactoring + Renaming fails for
	  delegate".

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* UnitTests.csproj: Update reference.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharpBinding/TestWorkbenchWindow.cs: Track api
	  changes.

2009-07-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for "Bug 526667 - wrong code completion in object
	  initialisation (new O() {...};)".

2009-07-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestViewContent.cs:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Fixed
	  some unit tests.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/MSBuildTests.cs: Added test for bug
	  480813 - Referenced project with spaces/special characters
	  isn't saved or built properly

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: Fix
	  warning.

2009-07-28  Lluis Sanchez Gual  <lluis@novell.com>

	* TestBase.cs: Set 2.0 as default target framework for the
	  tests.

2009-07-16  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* UnitTests.csproj:
	* MonoDevelop.Refactoring:
	* MonoDevelop.CSharpBinding/TestViewContent.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs: Added first
	  refactoring unit test for extract method.

2009-07-07  Mike Krüger  <mkrueger@novell.com>

	* TestBase.cs: Fixed unit tests.
